# tree-sitter-cleancopy

./: .pdm-python  Cargo.toml  LICENSE  MANIFEST.in  Makefile  Package.swift  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib  pyproject.toml  setup.py
.github/workflows/: on_release-publish_pypi.yaml  on_trigger-publish_pypi_test.yaml
bindings/c/: tree-sitter-cleancopy.h  tree-sitter-cleancopy.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tree_sitter_cleancopy/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
src/: cleancopy_chars.h  grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: annotations.txt  content_lines.txt  embeds.txt  lists.txt  metadata.txt  nodes.txt
